BEメソッド作成